# autoware

./: .ansible-lint  .autoware_resolved.repos  .beta.repos  .cspell.json  .markdown-link-check.json  .pre-commit-config.yaml  .release_info.yaml  .webauto-ci-multi-stage.yml  .webauto-ci.yml  .yamllint.yaml  LICENSE  README.md  amd64.env  ansible-galaxy-requirements.yaml  autoware.repos  ci.repos  cmd_helper.sh  defaults.env  edge-auto-jetson.repos  get_ml_model.sh  product.repos  repos-fetch.py  repos-filter.sh  setup-dev-env.sh  setup-ecu.sh  simulator.repos  tools.repos
.github/: CODEOWNERS  sync-files.yaml
ansible/playbooks/: x2_mot.yaml  (+23 more)
autoware_proj_version/: CMakeLists.txt  package.xml
autoware_proj_version/resource/: version.json
dev/: cyclonedds.xml.template  script.sh
docker/: README.md  build.sh
docker-multi-stage/: README.md  build-base.bash  build-cuda.bash  build-main.bash  docker-bake-base.hcl  docker-bake-cuda.hcl  docker-bake-main.hcl  docker-compose.yaml  logging-simulation.env  planning-simulation.env
docs/: metrics_list.md  universe.md  universe_en.md
ota/: addon_sys_config.yaml  addonlite_sys_config.yaml  autoware_sys_config.yaml  extra_excludes.txt  logging_sys_config.yaml  main_sys_config.yaml  media-streaming1_sys_config.yaml  media-streaming2_sys_config.yaml  perception1_sys_config.yaml  perception2_sys_config.yaml  signage_sys_config.yaml  sub_sys_config.yaml  voice-system_sys_config.yaml
parameter_settings/: planning_settings.env
scripts/: README.md  apply_symlink.sh  build_and_run_product.sh  install-base.sh
src/: .gitignore
(+425 files in other folders)
